A lot of changes

--- a/distance.html
+++ b/distance.html
@@ -24,6 +24,7 @@
       <a href="weather.html">weather</a>
       <a href="distance.html">distance</a>
       <a href="music.html">music</a>
+      <a href="qotd.html">question of the day</a>
     </div>
   </nav>
 
