--- a/mood.html
+++ b/mood.html
@@ -23,34 +23,46 @@
       <a href="weather.html">weather</a>
       <a href="distance.html">distance</a>
       <a href="music.html">music</a>
+      <a href="qotd.html">question of the day</a>
     </div>
   </nav>
 
   <main class="main">
-    <div class="container">
+    <div class="container container-wide">
       <h1 class="page-title"><i class="bi bi-emoji-smile"></i> how we're feeling</h1>
       <div id="moodList" class="list"></div>
-      <form id="moodForm" class="card">
-        <select id="moodFrom" required>
-          <option value="">— who's logging? —</option>
-          <option value="Will">Will</option>
-          <option value="Jolene">Jolene</option>
-        </select>
-        <div class="mood-scale-wrap">
-          <label>How are you feeling? (1–10)</label>
-          <input type="range" id="moodScore" min="1" max="10" value="7">
-          <p class="mood-scale-value" id="moodScoreValue">7</p>
+      <div class="split-row">
+        <div class="split-side side-will card">
+          <span class="split-label">For Will</span>
+          <div class="mood-scale-wrap">
+            <label>How are you feeling? (1–10)</label>
+            <input type="range" id="moodScoreWill" min="1" max="10" value="7">
+            <p class="mood-scale-value" id="moodScoreValueWill">7</p>
+          </div>
+          <textarea id="moodNoteWill" placeholder="Optional note..." rows="2"></textarea>
+          <button type="button" class="btn btn-will" id="saveMoodWill">Save</button>
         </div>
-        <textarea id="moodNote" placeholder="Optional note..." rows="2"></textarea>
-        <button type="submit" class="btn">Save</button>
-      </form>
+        <div class="split-side side-jolene card">
+          <span class="split-label">For Jolene</span>
+          <div class="mood-scale-wrap">
+            <label>How are you feeling? (1–10)</label>
+            <input type="range" id="moodScoreJolene" min="1" max="10" value="7">
+            <p class="mood-scale-value" id="moodScoreValueJolene">7</p>
+          </div>
+          <textarea id="moodNoteJolene" placeholder="Optional note..." rows="2"></textarea>
+          <button type="button" class="btn btn-jolene" id="saveMoodJolene">Save</button>
+        </div>
+      </div>
     </div>
   </main>
 
   <script src="js/shared.js"></script>
   <script>
-    document.getElementById('moodScore').addEventListener('input', function() {
-      document.getElementById('moodScoreValue').textContent = this.value;
+    document.getElementById('moodScoreWill').addEventListener('input', function() {
+      document.getElementById('moodScoreValueWill').textContent = this.value;
+    });
+    document.getElementById('moodScoreJolene').addEventListener('input', function() {
+      document.getElementById('moodScoreValueJolene').textContent = this.value;
     });
     function loadMood(client) {
       var el = document.getElementById('moodList');
@@ -70,25 +82,28 @@
         })
         .catch(function(err) { el.innerHTML = '<p class="loading">Run supabase_tables.sql first.</p>'; console.error(err); });
     }
-    getSupabase(function(c) { loadMood(c); });
-    document.getElementById('moodForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      var from = document.getElementById('moodFrom').value.trim();
-      var score = parseInt(document.getElementById('moodScore').value || '5', 10);
-      var note = document.getElementById('moodNote').value.trim() || null;
-      if (!from) return;
-      var btn = this.querySelector('.btn');
+    function saveMood(from, scoreId, noteId, btnId) {
+      var score = parseInt(document.getElementById(scoreId).value || '5', 10);
+      var note = document.getElementById(noteId).value.trim() || null;
+      var btn = document.getElementById(btnId);
       if (btn) { btn.disabled = true; btn.textContent = 'Saving...'; }
       getSupabase(function(client) {
         if (!client) { if (btn) { btn.disabled = false; btn.textContent = 'Save'; } return; }
         client.from('mood').insert([{ from_name: from, score: score, note: note }]).then(function(r) {
           if (r.error) throw r.error;
-          document.getElementById('moodNote').value = '';
+          document.getElementById(noteId).value = '';
           loadMood(client);
         }).catch(function(err) { alert('Could not save.'); }).finally(function() {
           if (btn) { btn.disabled = false; btn.textContent = 'Save'; }
         });
       });
+    }
+    getSupabase(function(c) { loadMood(c); });
+    document.getElementById('saveMoodWill').addEventListener('click', function() {
+      saveMood('Will', 'moodScoreWill', 'moodNoteWill', 'saveMoodWill');
+    });
+    document.getElementById('saveMoodJolene').addEventListener('click', function() {
+      saveMood('Jolene', 'moodScoreJolene', 'moodNoteJolene', 'saveMoodJolene');
     });
   </script>
 </body>
