--- a/timeline.html
+++ b/timeline.html
@@ -13,7 +13,8 @@
 <body>
   <nav class="site-nav">
     <a href="index.html" class="nav-logo">will + jolene</a>
-    <div class="nav-links">
+    <button type="button" class="nav-toggle" id="navToggle" aria-label="Toggle menu"><i class="bi bi-list"></i></button>
+    <div class="nav-links" id="navLinks">
       <a href="messages.html">messages</a>
       <a href="lifts.html">lifts</a>
       <a href="mood.html">mood</a>
@@ -60,5 +61,6 @@
       </div>
     </div>
   </main>
+  <script src="js/shared.js"></script>
 </body>
 </html>
