--- a/timeline.html
+++ b/timeline.html
@@ -36,7 +36,7 @@
         <p class="timeline-event">will + jolene met</p>
       </div>
       <div class="timeline-item">
-        <p class="timeline-date">june 2022</p>
+        <p class="timeline-date">june 22 2022</p>
         <p class="timeline-event">fair date</p>
       </div>
       <div class="timeline-item">
@@ -44,11 +44,23 @@
         <p class="timeline-event">official</p>
       </div>
       <div class="timeline-item">
-        <p class="timeline-date">february 2026</p>
+        <p class="timeline-date">february 14 2026</p>
         <p class="timeline-event">first valentines day together</p>
       </div>
       <div class="timeline-item">
-        <p class="timeline-date">may 2026</p>
+        <p class="timeline-date">march 12 2026</p>
+        <p class="timeline-event">will + jolene + will's mom dinner</p>
+      </div>
+      <div class="timeline-item">
+        <p class="timeline-date">march 13 2026</p>
+        <p class="timeline-event">will + jolene + will's grandparents dinner</p>
+      </div>
+      <div class="timeline-item">
+        <p class="timeline-date">march 14 2026</p>
+        <p class="timeline-event">will + jolene + jolene's parents dinner</p>
+      </div>
+      <div class="timeline-item">
+        <p class="timeline-date">may 15 2026</p>
         <p class="timeline-event">will graduation</p>
       </div>
       <div class="timeline-item">
