Added QOTD page

--- a/distance.html
+++ b/distance.html
@@ -40,6 +40,21 @@
         <p class="distance-route">Harrisonburg (Will) → State College (Jolene)</p>
         <p class="distance-drive">~<span id="driveHours">—</span> hours driving</p>
       </div>
+      <div class="school-logos-section">
+        <p class="school-logos-label">Our schools</p>
+        <div class="school-logos">
+          <div class="school-logo-card">
+            <img src="images/jmu-logo.png" alt="JMU" class="school-logo-img" onerror="this.style.display='none'">
+            <span class="school-logo-name">JMU</span>
+            <span class="school-logo-who">Will · Harrisonburg</span>
+          </div>
+          <div class="school-logo-card">
+            <img src="images/penn-state-logo.png" alt="Penn State" class="school-logo-img" onerror="this.style.display='none'">
+            <span class="school-logo-name">Penn State</span>
+            <span class="school-logo-who">Jolene · State College</span>
+          </div>
+        </div>
+      </div>
       <div id="map" class="map-container"></div>
       <p class="distance-open">
         <a href="#" id="openInMaps" target="_blank" rel="noopener" class="link-maps">Open route in Google Maps</a>
