--- a/lifts.html
+++ b/lifts.html
@@ -39,8 +39,8 @@
           <p class="gym-who">Will · Harrisonburg</p>
         </div>
         <div class="gym-card">
-          <img class="gym-logo" src="images/penn-gym-logo.png" alt="Penn State" onerror="this.style.display='none'">
-          <p class="gym-name">Penn State</p>
+          <img class="gym-logo" src="images/planet-fitness-logo.png" alt="Planet Fitness" onerror="this.style.display='none'">
+          <p class="gym-name">Planet Fitness</p>
           <p class="gym-who">Jolene · State College</p>
         </div>
       </div>
