Fixed school logos

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <p class="moon-phase" id="moonPhase"></p>
 
         <div class="school-logos">
-          <img src="images/jmu-logo.png" alt="JMU" class="school-logo" onerror="this.style.display='none'">
-          <img src="images/penn-state-logo.png" alt="Penn State" class="school-logo" onerror="this.style.display='none'">
+          <img src="school_logos/jmu-logo.png" alt="JMU" class="school-logo" onerror="this.style.display='none'">
+          <img src="school_logos/penn-state-logo.png" alt="Penn State" class="school-logo" onerror="this.style.display='none'">
         </div>
 
         <div class="cards">
