Updated school logo

--- a/distance.html
+++ b/distance.html
@@ -44,12 +44,12 @@
         <p class="school-logos-label">Our schools</p>
         <div class="school-logos">
           <div class="school-logo-card">
-            <img src="school_logos/jmu-logo.png" alt="JMU" class="school-logo-img" onerror="this.style.display='none'">
+            <img src="school_logos/jmu_logo.png" alt="JMU" class="school-logo-img" onerror="this.style.display='none'">
             <span class="school-logo-name">JMU</span>
             <span class="school-logo-who">Will · Harrisonburg</span>
           </div>
           <div class="school-logo-card">
-            <img src="school_logos/penn-state-logo.png" alt="Penn State" class="school-logo-img" onerror="this.style.display='none'">
+            <img src="school_logos/psu_logo.png" alt="Penn State" class="school-logo-img" onerror="this.style.display='none'">
             <span class="school-logo-name">Penn State</span>
             <span class="school-logo-who">Jolene · State College</span>
           </div>
