Fixed up some logos and moved some things around

--- a/lifts.html
+++ b/lifts.html
@@ -34,12 +34,12 @@
 
       <div class="gym-cards">
         <div class="gym-card">
-          <img class="gym-logo" src="gyms/urec-logo.png" alt="JMU UREC" onerror="this.style.display='none'">
+          <img class="gym-logo" src="gyms/urec.png" alt="JMU UREC" onerror="this.style.display='none'">
           <p class="gym-name">JMU UREC</p>
           <p class="gym-who">Will · Harrisonburg</p>
         </div>
         <div class="gym-card">
-          <img class="gym-logo" src="gyms/planet-fitness-logo.png" alt="Planet Fitness" onerror="this.style.display='none'">
+          <img class="gym-logo" src="gyms/pf.png" alt="Planet Fitness" onerror="this.style.display='none'">
           <p class="gym-name">Planet Fitness</p>
           <p class="gym-who">Jolene · State College</p>
         </div>
