--- a/timeline.html
+++ b/timeline.html
@@ -40,8 +40,16 @@
         <p class="timeline-event">fair date</p>
       </div>
       <div class="timeline-item">
+        <p class="timeline-date">january 16 2026</p>
+        <p class="timeline-event">will's first visit to penn state</p>
+      </div>
+      <div class="timeline-item">
         <p class="timeline-date">jan 17 2026</p>
         <p class="timeline-event">official</p>
+      </div>
+      <div class="timeline-item">
+        <p class="timeline-date">january 30 2026</p>
+        <p class="timeline-event">will visit jolene at penn state</p>
       </div>
       <div class="timeline-item">
         <p class="timeline-date">february 14 2026</p>
@@ -58,6 +66,10 @@
       <div class="timeline-item">
         <p class="timeline-date">march 14 2026</p>
         <p class="timeline-event">will + jolene + jolene's parents dinner</p>
+      </div>
+      <div class="timeline-item">
+        <p class="timeline-date">march 27 2026</p>
+        <p class="timeline-event">jolene visit will at JMU</p>
       </div>
       <div class="timeline-item">
         <p class="timeline-date">may 15 2026</p>
